--- a/Camera/index.html
+++ b/Camera/index.html
@@ -18,7 +18,7 @@
  <div class="action-cont" >
     
         <div class="record-btn-cont">
-           <div class="record-btn"></div>
+           <div class="record-btn "></div>
          </div>
        
          <div class="capture-btn-cont">
@@ -27,7 +27,9 @@
    
      </div>
 
-
+<div class="timer-cont">
+  <h1 class = "timer">00:00:00</h1>
+</div>
 
   <script src="./script.js"></script>
 </body>
