--- a/Camera/index.html
+++ b/Camera/index.html
@@ -31,6 +31,16 @@
   <h1 class = "timer">00:00:00</h1>
 </div>
 
+<div class="filter-cont">
+<div class="filter orange"></div>
+<div class="filter brown"></div>
+<div class="filter pink"></div>
+<div class="filter transparent"></div>
+</div>
+<div class="filter-layer">
+  
+</div>
+
   <script src="./script.js"></script>
 </body>
 </html>
