--- a/Camera/index.html
+++ b/Camera/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Camera_Gallery</title>
 </head>
@@ -37,11 +38,18 @@
 <div class="filter pink"></div>
 <div class="filter transparent"></div>
 </div>
-<div class="filter-layer">
-  
-</div>
+<div class="filter-layer"></div>
 
+<span><i class="material-icons gallery">image</i></span>
+<script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
 
+  <script src="./db.js"></script>
   <script src="./script.js"></script>
+  <script>
+    let gallery = document.querySelector(".gallery");
+    gallery.addEventListener("click", (e)=>{
+      location.assign("./gallery.html");
+    })
+  </script>
 </body>
 </html>
