--- a/Camera/gallery.html
+++ b/Camera/gallery.html
@@ -8,20 +8,21 @@
     <title>Gallery</title>
 </head>
 <body>
-  Gallery
+  
   <div class ="back">Back</div>  
   <div class="gallery-cont">
-    <div class="media-cont">
-        <div class="media"></div>
-        <div class="delete action-btn"></div>
-        <div class="download action-btn"></div>         
-    </div>
+   
   </div>
+
+  <script src="./db.js"></script>
+  <script src="./gallery.js"></script>
 <script>
+    
     let backElem = document.querySelector(".back");
-    backElem.addEventListner("click",(e)=>{
+    backElem.addEventListener("click",(e)=>{
        location.assign("./index.html"); 
     })
 </script>
 </body>
 </html>
+
